<resources>
    <string name="app_name">Ttop Gallery</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="gallery_fragment">Gallery Fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_code_sent_to_your_email">Enter code sent to your email</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
</resources>