<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_fragment_EditTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_fragment_EditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/login_fragment_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/login_fragment_register_link_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/login_fragment_forgot_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"/>

    <TextView
        android:id="@+id/login_fragment_error_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ProgressBar
        android:id="@+id/login_fragment_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>