<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        />

    <EditText
        android:id="@+id/change_password_fragment_EditTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/change_password_fragment_current_EditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/enter_your_current_password"/>

    <EditText
        android:id="@+id/change_password_fragment_new_EditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/enter_new_password"/>

    <EditText
        android:id="@+id/change_password_fragment_confirm_new_EditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/confirm_new_password"/>

    <Button
        android:id="@+id/change_password_fragment_changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/change_password_fragment_error_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ProgressBar
        android:id="@+id/change_password_fragment_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>