<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        />

    <EditText
        android:id="@+id/reset_password_fragment_EditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/enter_new_password"/>

    <EditText
        android:id="@+id/reset_password_fragment_confirm_new_EditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/confirm_new_password"/>

    <EditText
        android:id="@+id/reset_password_fragment_otp_editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/enter_code_sent_to_your_email"/>

    <Button
        android:id="@+id/reset_password_fragment_resetPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/reset_password_fragment_error_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ProgressBar
        android:id="@+id/reset_password_fragment_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>